# oop_lab2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: lab2.h
src/: lab2.cpp
tests/: eleven_test.cpp  lab2_tests.cpp
